--- a/package.json
+++ b/package.json
@@ -30,13 +30,15 @@
     "react-dom": "^17.0.1",
     "react-helmet-async": "^1.0.9",
     "react-i18next": "^11.8.10",
+    "react-id-swiper": "^4.0.0",
     "react-mapbox-gl": "^5.1.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^7.0.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "swiper": "^7.3.1"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.13.10",
